--- a/.dockerignore
+++ b/.dockerignore
@@ -20,6 +20,10 @@
 !/log/.keep
 !/tmp/.keep
 
+# Ignore bootsnap cache
+/.bootsnap
+/tmp/cache/bootsnap*
+
 # Ignore pidfiles, but keep the directory.
 /tmp/pids/*
 !/tmp/pids/.keep
