Fix Rails 8.1 compatibility with Litestack 0.4.3
- Add monkey patch in config/application.rb to handle removed sqlite3_production_warning
- Configure DATABASE_ADAPTER environment variable for asset precompilation
- Update database.yml to support sqlite3 adapter during build
- Clean up manifest.js to only include existing directories
- This fixes the NoMethodError during Fly.io deployment

--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@
 # `Litesupport.root(env).join(<path>)` stores data under `LITESTACK_DATA_PATH` (default: ./db/<env>).
 # Set LITESTACK_DATA_PATH="/data" in production so the DB lives on the Fly volume.
 default: &default
-  adapter: litedb
+  adapter: <%= ENV.fetch("DATABASE_ADAPTER", "litedb") %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   idle_timeout: 0
 
